# MULTI-CRM-SYNCH-PIPELINE

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
configs/: config.yaml
prompts/: analyze_error_v1.md  enrich_lead_v1.md
src/: config.py
src/api/: main.py  routes.py  schemas.py
src/clients/: hubspot.py  odoo.py  salesforce.py
src/core/: exceptions.py  logging.py
src/graph/: edges.py  graph.py  nodes.py  state.py
src/llm/: client.py
tests/: test_edges.py  test_graph.py  test_schemas.py
